--- a/package.json
+++ b/package.json
@@ -7,10 +7,11 @@
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
-    "lint": "eslint 'src//*.ts'",
-    "format:check": "prettier --check 'src//*.ts'",
-    "format:fix": "prettier --write 'src//*.ts'",
-    "test:coverage": "jest --coverage"
+    "lint": "eslint 'src/**/*.ts'",
+    "format:check": "prettier --check 'src/**/*.ts'",
+    "format:fix": "prettier --write 'src/**/*.ts'",
+    "test:coverage": "jest --coverage",
+    "migration:run": "npx typeorm migration:run -- -d src/config/db.ts"
   },
   "keywords": [],
   "author": "",
@@ -27,16 +28,20 @@
     "express-rate-limit": "^7.5.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "nanoid": "^5.1.2",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "pg": "^8.13.1",
+    "rate-limit-redis": "^4.2.0",
+    "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
     "speakeasy": "^2.0.0",
-    "typeorm": "^0.3.20",
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.21.0",
+    "@sentry/node": "^7.101.1",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
@@ -44,25 +49,25 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
+    "@types/nanoid": "^2.1.0",
     "@types/node": "^22.10.7",
     "@types/node-cron": "^3.0.11",
     "@types/nodemailer": "^6.4.17",
+    "@types/redis": "^4.0.11",
     "@types/speakeasy": "^2.0.10",
     "@types/supertest": "^6.0.2",
     "@types/uuid": "^10.0.0",
+    "@types/winston": "^2.4.4",
     "bcrypt": "^5.1.1",
-    "eslint": "^9.21.0",
-    "globals": "^16.0.0",
+    "dd-trace": "^4.26.0",
     "jest": "^29.7.0",
     "pg": "^8.13.1",
-    "prettier": "^3.5.2",
     "reflect-metadata": "^0.2.2",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "typeorm": "^0.3.20",
-    "typescript": "^5.7.3",
-    "typescript-eslint": "^8.25.0"
+    "typescript": "^5.8.2"
   }
 }
