test: add workers for test

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -50,7 +50,7 @@ jobs:
         run: docker compose up -d
 
       - name: Run Tests in Docker
-        run: docker exec paystell-backend npm test
+        run: docker exec paystell-backend npm test -- --maxWorkers=2
 
       - name: Stop and Remove Docker Containers
         run: docker compose down
