Implement the payment processing service

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,8 @@ REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_URL=redis://localhost:6379
 
+# Stellar Configuration
+STELLAR_HORIZON_URL=
+SOROBAN_CONTRACT_ID=
+STELLAR_SECRET_KEY=
+STELLAR_NETWORK_PASSPHRASE=
