--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "auth0-js": "^9.28.0",
     "@aws-sdk/client-s3": "^3.777.0",
     "@types/multer": "^1.4.12",
+    "auth0-js": "^9.28.0",
     "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^2.2.0",
     "bull": "^4.16.5",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -38,6 +39,7 @@
     "multer": "^1.4.5-lts.2",
     "nanoid": "^5.1.2",
     "node-cron": "^3.0.3",
+    "node-fetch": "^2.7.0",
     "nodemailer": "^6.10.0",
     "parse5": "^7.2.1",
     "pg": "^8.13.1",
