--- a/package.json
+++ b/package.json
@@ -13,5 +13,29 @@
     "test:coverage": "jest --coverage",
     "migration:run": "npx typeorm-ts-node-commonjs migration:run -d src/config/db.ts",
     "init-rbac": "ts-node src/scripts/initializeRBAC.ts"
+  },
+  "dependencies": {
+    "@stellar/stellar-sdk": "^13.3.0",
+    "bcryptjs": "^3.0.2",
+    "class-transformer": "^0.5.0",
+    "class-validator": "^0.14.0",
+    "express": "^4.18.0",
+    "express-validator": "^7.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.0"
+  },
+  "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/express": "^4.17.23",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/node": "^20.19.2",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "jest": "^29.0.0",
+    "prettier": "^3.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
