--- a/.env.docker
+++ b/.env.docker
@@ -8,3 +8,11 @@ REDIS_PORT=6379
 REDIS_URL=redis://redis:6379
 PORT=4000
 NODE_ENV=development
+
+# Stellar Configuration
+STELLAR_CONTRACT_ID=contractid
+STELLAR_HORIZON_URL=https://horizon-testnet.stellar.org
+STELLAR_NETWORK_PASSPHRASE=TestSDFNetwork
+CONTRACT_ADMIN_SECRET=SDRB3YFADX5WJ4Y6VTEVJX3Z6RQFY3U4OQKJX5X6X3Z6XK5X6X3Z6XK5X
+STELLAR_SECRET_KEY=SDRB3YFADX5WJ4Y6VTEVJX3Z6RQFY3U4OQKJX5X6X3Z6XK5X6X3Z6XK5X
+SOROBAN_CONTRACT_ID=CAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAD2KM
