feat: enhance environment configuration and add Swagger documentation for various routes

--- a/.env.docker
+++ b/.env.docker
@@ -8,3 +8,14 @@ REDIS_PORT=6379
 REDIS_URL=redis://redis:6379
 PORT=4000
 NODE_ENV=development
+
+AUTH0_DOMAINL=https://dev-wu6ywz3z0p1tpbkp.us.auth0.com
+AUTH0_CLIENT_ID=TPaq6yv0MBcpuP2fFJcSUDsaqnrYbzo2
+AUTH0_CLIENT_SECRET=dO2W6eUGpJmQx4IWhDtytcdG8nhej9mDg3g9Y4TAL-pyIootyoR8Z_jnB0gjUpiK                       
+BASE_URL=http://localhost:4000
+
+NEW_RELIC_APP_NAME=paystell
+NEW_RELIC_LICENSE_KEY=8e99bff2866c24cb223cd7bd452d8e86FFFFNRAL
+NEW_RELIC_NO_CONFIG_FILE=false
+NEW_RELIC_DISTRIBUTED_TRACING_ENABLED=true
+NEW_RELIC_LABELS=your-labels
