--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.777.0",
     "@stellar/stellar-sdk": "^13.3.0",
-    "@types/multer": "^1.4.12",
     "@types/rate-limit-redis": "^1.7.4",
-
     "auth0-js": "^9.28.0",
     "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
+    "clamav.js": "^0.12.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -48,6 +47,7 @@
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
+    "sharp": "^0.34.3",
     "speakeasy": "^2.0.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
@@ -59,14 +59,17 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@sentry/node": "^7.101.1",
+    "@types/aws-sdk": "^2.7.4",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/clamav.js": "^0.12.4",
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
+    "@types/express": "^5.0.3",
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
+    "@types/multer": "^2.0.0",
     "@types/nanoid": "^3.0.0",
     "@types/newrelic": "^9.14.8",
     "@types/node": "^22.10.7",
