--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^1.8.1",
     "bcryptjs": "^2.4.3",
     "bull": "^4.16.5",
+    "check-disk-space": "^3.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
@@ -46,6 +47,7 @@
     "nodemailer": "^6.10.0",
     "parse5": "^7.2.1",
     "pg": "^8.13.1",
+    "prom-client": "^15.1.3",
     "rate-limit-redis": "^4.2.0",
     "redis": "^4.7.0",
     "reflect-metadata": "^0.2.2",
