--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start": "node dist/index.js",
     "test": "jest",
     "lint": "eslint 'src/**/*.ts'",
-    "format:check": "prettier --check 'src/**/*.ts'",
-    "format:fix": "prettier --write 'src/**/*.ts'",
+    "format:check": "prettier --check \"src/**/*.ts\"",
+    "format:fix": "prettier --write \"src/**/*.ts\"",
     "test:coverage": "jest --coverage",
     "migration:run": "npx typeorm-ts-node-commonjs migration:run -d src/config/db.ts",
     "validate:openapi": "node scripts/validate-openapi.js",
